--- a/QuanLyThuVien.csproj
+++ b/QuanLyThuVien.csproj
@@ -16,6 +16,7 @@
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
     <OldToolsVersion>2.0</OldToolsVersion>
+    <TargetFrameworkProfile />
     <PublishUrl>http://localhost/quanlythuvien/</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Web</InstallFrom>
@@ -30,7 +31,6 @@
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -117,6 +117,8 @@
   <ItemGroup>
     <Compile Include="Data\ketnoi.cs" />
     <Compile Include="Data\laydulieu.cs" />
+    <Compile Include="DoiTuong\GiaXep.cs" />
+    <Compile Include="DoiTuong\Kho.cs" />
     <Compile Include="Form\Formhienthi.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -172,7 +174,7 @@
     <Compile Include="Data\KTdangnhap.cs" />
     <Compile Include="DoiTuong\NhaXuatBan.cs" />
     <Compile Include="DoiTuong\TheLoai.cs" />
-    <Compile Include="DoiTuong\Sach.cs" />
+    <Compile Include="DoiTuong\TaiLieu.cs" />
     <Compile Include="DoiTuong\Lsachhong.cs" />
     <Compile Include="DoiTuong\Lsachmuon.cs" />
     <Compile Include="DoiTuong\TacGia.cs" />
